[package]
name = "test_engine"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[dependencies]
engine = { path = "./engine" }
lazy_static = "1.4.0"
vertex_derive = { path = "./vertex_derive" }
winapi = { version = "0.3.8", features = [
    "d3d11",
    "d3dcommon",
    "d3dcompiler",
    "dxgidebug",
    "impl-default",
    "std",
    "sysinfoapi",
    "winerror",
    "winuser"
] }
