[package]
name = "engine"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
winapi = { version = "0.3.8", features = [
    "d3d11",
    "d3dcommon",
    "d3dcompiler",
    "impl-default",
    "std",
    "sysinfoapi",
    "winerror",
    "winuser"
] }