[package]
name = "vertex_derive"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
winapi = { version = "0.3.8", features = [
    "d3d11",
    "d3dcommon",
    "d3dcompiler",
    "impl-default",
    "std",
    "sysinfoapi",
    "winerror",
    "winuser"
] }
