[package]
name = "engine"
version = "0.1.0"
authors = ["Will Hakes <info@cwilliamhakes.com>"]
edition = "2018"

[dependencies]
float-cmp = "0.8.0"
image = { version = "0.23.10", default-features = false, features = [
    "jpeg",
    "png",
    "bmp"
] }
lazy_static = "1.4.0"
log = "0.4"
vertex_derive = { path = "../vertex_derive" }
wavefront_obj = "10.0"
winapi = { version = "0.3.9", features = [
    "d3d11",
    "d3d11sdklayers",
    "d3dcommon",
    "d3dcompiler",
    "impl-default",
    "std",
    "sysinfoapi",
    "winerror",
    "winuser"
] }

[dev-dependencies]
rand = "0.8"
